# ebuka_mcps

./: .gitignore  Dockerfile  Dockerfile.mcp_host  Dockerfile.rag_server  Dockerfile.unified  Ebuka_MCP_Heroku_Deployment.postman_collection.json  README.md  apply_uuid_fix.py  azure_storage.py  create_sample_pdf.py  deploy.yml  docker-compose.yml  docker-entrypoint.sh  fast_api_impl.py  file_processor.py  heroku.yml  pyproject.toml  rag_interface.py  rag_mcp_server.py  rag_server.py  requirements.txt  sample.docx  servers_config.json  start_mcp_host.sh  test_ai_subject_detection.py  utils.py
.github/workflows/: deploy.yml
.omniagent_config/: servers_config_TutoringRagAgent.json
mcp_host/: app.py  main.py  schemas.py  system_prompt.py  utils.py
mcp_host/core/: config.py
mcp_host/database/: db.py
mcp_host/mcp_agent/: agents.py  system_prompt.py
mcp_host/models/: __init__.py  chats.py  progress.py  users.py
mcp_host/routers/: auths.py  chats.py  consent.py  progress.py
mcp_host/schemas/: auth.py  chats.py  progress.py  users.py
mcp_host/services/: auths.py  chats.py  chats.py.backup.20251023_232206  progress.py  session_tracker.py  users.py
migrations/: env.py
migrations/versions/: 08390af8d38a_update_user_model.py  845ee70baa51_convert_datetime_columns_to_timestamptz.py  8df500ecf18b_re_baselining_initial_state.py  9bb6ec201cb9_add_progress_tracking_and_consent_audit_.py  (+4 more)
rag/: __init__.py  config.py  models.py  system.py  types.py  utils.py
tests/: test_file_processor.py  test_workflow.py
utils/: file_processor.py  get_auth_token.py
(+4 files in other folders)
